# omnibird

./: .env.example  .gitignore  Dockerfile  README.md  admin.py  blackjack.py  bot.py  compose.yaml  db.py  economy.py  gambling.py  helpers.py  languages.py  main.py  maths.py  mfw.py  pyproject.toml  requirements.txt  responses.py  shop.py
bot/: db.py  languages.py  main.py
bot/cogs/admin/: __init__.py  cog.py
bot/cogs/economy/: __init__.py  cog.py
bot/cogs/gambling/: cog.py
bot/cogs/maths/: __init__.py  cog.py
bot/cogs/mfw/: __init__.py  cog.py
bot/cogs/misc/: __init__.py  cog.py
bot/cogs/shop/: cog.py
bot/locale/: dev.json  en.json
bot/utils/: misc.py
bot/utils/pure/: parsing.py
bot/utils/services/: MemoryCache.py  dbutils.py  packs.py
cogs/admin/: __init__.py  cog.py
cogs/admin/commands/: addguild.py  clearcache.py  grant.py  restart.py  setrarity.py
cogs/economy/: cog.py
cogs/economy/commands/: give.py  leaderboard.py
cogs/gambling/: __init__.py  cog.py
cogs/gambling/commands/: blackjack.py  coinflip.py  russianroulette.py  slots.py
cogs/gambling/misc/: blackjack_state.py
cogs/maths/: cog.py
cogs/maths/commands/: math.py
cogs/mfw/: __init__.py  cog.py
cogs/shop/: cog.py
db/: init.sql  schema.sql
locale/: en.json
utils/: Pagination.py  decorators.py  harvest_messages.py  locale.py  misc.py  symbols.py
utils/mathproblems/: arithmetic.py  geometry.py  triangle.py  trigonometry.py
utils/packs/: definition.py
utils/pure/: formatting.py  parsing.py
utils/services/: dbutils.py  discordutils.py  packs.py
(+43 files in other folders)
