[project]
name = "omnibird"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "cryptography>=46.0.5",
    "discord-py>=2.7.1",
    "emoji>=2.15.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
